Assingment solution for week 2

--- a/site/index.html
+++ b/site/index.html
@@ -2,9 +2,26 @@
 <html>
 <head>
 	<title>Hello Coursera!</title>
+	<style type="text/css">
+		div, span {
+  background-color: blue;
+}
+#mySection {
+  color: green;
+}
+
+.myColor {
+  color: blue;
+}
+	</style>
 </head>
 <body>
-<h1>Hello Coursera! little addition</h1>
+
+<div>
+  <section id="mySection" class="myColor">
+    I am having a color identity crisis again! Help!
+  </section>
+</div>
 
 </body>
 </html>
