--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -47,7 +47,7 @@
   <div class="container-fluid text-center"><h1>Our Menu</h1></div>
     <div class="container-fluid">
 	<div class="row">
-  	<div class="col-md-12">
+  	<div class="col-xs-12">
 
         <section id="section1">
              <h3 class="text-center">Chicken</h3>
@@ -59,7 +59,7 @@
       </p>
       </section>
       </div>
-    <div class="col-md-12">  
+    <div class="col-xs-12">  
 <section id="section2">
              <h3 class="text-center">Beef</h3>
            <p>
@@ -70,7 +70,7 @@
       </p>
         </section>
         </div>
-        <div class="col-md-12">
+        <div class="col-xs-12">
         <section id="section3">
              <h3 class="text-center">Sushi</h3>
            <p>
